--- a/Hiker/Info.plist
+++ b/Hiker/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Hiker tracks and stores your location in the app. &apos;Always Allow&apos; is necessary for tracking to work while the app is in the background</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Hiker tracks and stores your location in the app while you are using the app</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Hiker tracks and stores your location in the app. &apos;Always Allow&apos; is necessary for tracking to work while the app is in the background</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
